Uploaded image for project: 'Parquet'
  1. Parquet
  2. PARQUET-1334

[C++] memory_map parameter seems missleading in parquet file opener

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • cpp-1.4.0
    • cpp-1.5.0
    • parquet-cpp
    • None

    Description

      If memory_map parameter is true, normal file operation is executed, while in negative case, the according memory mapped file operation happens. Seems either be used via inverted logic or being bug.

      Attachments

        Activity

          People

            Unassigned Unassigned
            hoch.phil Philipp Hoch
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: