PARQUET-1334: [C++] memory_map parameter seems missleading in parquet file opener

If memory_map parameter is true, normal file operation is executed, while in negative case, the according memory mapped file operation happens. Seems either be used via inverted logic or being bug.

Author: Philipp Hoch <p.hoch@celonis.com>

Closes #471 from philhoch/bugfix-mixed-up-memory-map-parameter and squashes the following commits:

651cf6b [Philipp Hoch] switched logic within conditional to support memory mapped behavior if requested and readable file accordingly

Change-Id: I64c74f5bead99c72602d2260b0c36590dadbd55e